# RS-simple-scraper

./: .agent.md  .gitignore  CHANGELOG.md  Cargo.toml  GECKODRIVER_INFO.md  README.md
.ai/: improvements.md  optimization_plan.md
.github/workflows/: release.yml  rust.yml
src/: foxfox.rs  main.rs  models.rs  utils.rs
src/scrapers/: dc.rs  fm.rs  mod.rs  mp.rs
