[package]
name = "textminer"
version = "1.2.0"
authors = ["SIPU <ddasik00@naver.com>"]
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }          # 최신
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] } # 최신
chrono-tz = "0.10.4"                                         # 최신
async-trait = "0.1.89"                                       # 최신
serde = { version = "1.0.228", features = ["derive"] }       # 최신
flexi_logger = { version = "0.31", features = ["async"] }    # 최신
log = "0.4.29"                                               # 최신 (업데이트됨)
serde_json = "1.0.149"                                       # 최신
reqwest = { version = "0.13.3", features = ["blocking", "socks", "json"] } # 최신 (업데이트됨)
scraper = "0.26.0"                                           # 최신 (업데이트됨)
anyhow = "1.0.102"                                           # 최신
bytes = "1.11.1"                                             # 최신
regex = "1.12.3"                                             # 최신
url = "2.5.8"                                                # 최신
thirtyfour = "0.36.1"                                        # 최신
lazy_static = "1.5.0"                                        # 최신
futures = "0.3.32"                                           # 최신
